将黑名单命令校验功能移植模板方法